Add reaction pack management and active-pack rendering

--- a/popup.css
+++ b/popup.css
@@ -314,6 +314,10 @@ li:last-child {
   margin: 0;
 }
 
+.row-actions .danger {
+  background: linear-gradient(130deg, #e33b66, var(--danger));
+}
+
 .note {
   margin-top: 4px;
   text-align: center;
